# AKRO-AI

./: LICENSE.md  README.md  encrypt_bundle.py  gradle.properties  settings.gradle
.github/workflows/: build.yml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: FAQ.md  bundle.enc
app/src/main/assets/Claw-code/: README.md
app/src/main/cpp/: native_bridge.cpp
app/src/main/java/com/akro/ai/: AndroidCompilerBridge.kt  MainActivity.kt  WebViewActivity.kt
app/src/main/java/com/irazor/ai/: AndroidCompilerBridge.kt  MainActivity.kt  WebViewActivity.kt
app/src/main/res/drawable/: bg_gradient.xml  btn_red.xml  divider_red.xml  glow_circle.xml  glow_gold.xml
app/src/main/res/layout/: activity_main.xml  activity_webview.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
